fix: app width+height on mobile devices

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    @apply overflow-hidden;
+}
+
+body, html {
+    @apply w-full h-full m-0 p-0;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
@@ -9,6 +17,10 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+body > #root {
+    @apply h-full;
 }
 
 code {
@@ -22,4 +34,15 @@ code {
 
 .rs-form-control {
     @apply w-full;
+}
+
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
 }
